# qt6-test

./: CMakeLists.txt  CMakePresets-1.json  CMakePresets.json  README.md
app/: CMakeLists.txt  main.cpp  rcc.qrc
app-lib/: CMakeLists.txt  global.h  mywindow.cpp  mywindow.h  mywindow.qrc  mywindow2.qrc
app-lib/test/: CMakeLists.txt  main.cpp  rcc.qrc
app-lib/ui/: mywindow.ui
